--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +11,10 @@
     <title>Cevent App</title>
 
       <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="resources/css/vendor/xeditable.css">
+    <link rel="stylesheet" href="resources/css/vendor/font-awesome.min.css">
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="resources/css/main.css">
 
@@ -36,13 +38,11 @@
 
         <div class="col-xs-12 col-sm-9">
           <p class="pull-right visible-xs">
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
+            <button type="button" class="btn btn-primary" data-toggle="offcanvas" ng-click="toggleNav();">
+            	<span class="glyphicon glyphicon-align-justify"></span>
+            </button>
           </p>
-          <div class="jumbotron">
-            <h1>Hello, world!</h1>
-            <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
-            <div class="well" ui-view></div>  
-          </div>
+          <div class="well" ui-view></div>
         </div><!--/span-->
 
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
@@ -50,6 +50,7 @@
             <a ui-sref="route1" ui-sref-active="active" class="list-group-item">Route 1</a>
             <a ui-sref="route2" ui-sref-active="active" class="list-group-item">Route 2</a>
             <a ui-sref="guestbook.list" ui-sref-active="active" class="list-group-item">Guest Book</a>
+            <a ui-sref="venue" ui-sref-active="active" class="list-group-item">Venue</a>
             <a href="#" class="list-group-item">Link</a>
             <a href="#" class="list-group-item">Link</a>
             <a href="#" class="list-group-item">Link</a>
@@ -68,11 +69,14 @@
       </footer>
 
     </div><!--/.container-->    
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
+<!-- Placed at the end of the document so the pages load faster --> 
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
 <script type="text/javascript" src="resources/js/vendor/angular-ui-router.min.js"></script>
 <script src="resources/js/vendor/ui-bootstrap-tpls-0.10.0.min.js"></script>
 <script src="resources/js/vendor/xeditable.min.js"></script>
 <script src="resources/js/vendor/moment.min.js"></script>
+<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB2ZybSCIY74OfMWCSq3oqftOkjqfQEFzA&sensor=false"></script>
 <script src="resources/js/app.js"></script>
 <script src="resources/js/controllers.js"></script>
 <script src="resources/js/services.js"></script>
