--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="resources/css/vendor/xeditable.css">
     <link rel="stylesheet" href="resources/css/vendor/font-awesome.min.css">
+    <link href='//fonts.googleapis.com/css?family=Flamenco' rel='stylesheet' type='text/css'>
     <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="resources/css/animate.css">
     <link rel="stylesheet" href="resources/css/main.css">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -31,7 +33,11 @@
         <!--[if lt IE 10]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
+    <div class="header text-center">
+		<h1>Bhanu & Praveen</h1>
+		<div>March 24th 2014</div>
+	</div>
+	<div class="group"></div>
     <div class="container">
 
       <div class="row row-offcanvas row-offcanvas-right">
@@ -42,7 +48,11 @@
             	<span class="glyphicon glyphicon-align-justify"></span>
             </button>
           </p>
-          <div class="well" ui-view></div>
+          <div class="row">
+    		<div class=".col-md-12 ui-view-container">
+          		<div class="well" ui-view></div>
+          	</div>
+          </div>
         </div><!--/span-->
 
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
@@ -72,6 +82,7 @@
 <!-- Placed at the end of the document so the pages load faster --> 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-animate.js"></script>
 <script type="text/javascript" src="resources/js/vendor/angular-ui-router.min.js"></script>
 <script src="resources/js/vendor/ui-bootstrap-tpls-0.10.0.min.js"></script>
 <script src="resources/js/vendor/xeditable.min.js"></script>
