--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
+    <link rel="shortcut icon" href="resources/images/favicon.ico">
 
     <title>Cevent App</title>
 
@@ -27,6 +27,17 @@
     <!--[if lte IE 7]>
         <script src="resources/js/vendor/json2.js"></script>
     <![endif]-->
+    <!-- prefetch some images -->
+    <link rel="prefetch" href="resources/images/praveen/img_0.jpg">
+    <link rel="prefetch" href="resources/images/praveen/img_1.jpg">
+    <link rel="prefetch" href="resources/images/praveen/img_2.jpg">
+    <link rel="prefetch" href="resources/images/bhanu/img_0.jpg">
+    <link rel="prefetch" href="resources/images/bhanu/img_1.jpg">
+    <link rel="prefetch" href="resources/images/bhanu/img_2.jpg">
+    <link rel="prefetch" href="resources/images/cards/img_0.jpg">
+    <link rel="prefetch" href="resources/images/cards/img_1.jpg">
+    <link rel="prefetch" href="resources/images/cards/img_2.jpg">
+    <link rel="prefetch" href="resources/images/cards/img_3.jpg">
 </head>
 <body ng-app="ceventApp">
         <!--[if lt IE 10]>
