--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,11 +21,11 @@
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+      <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!--[if lte IE 7]>
-        <script src="resources/js/vendor/json2.js"></script>
+        <script src="resources/js/vendor/json2.min.js"></script>
     <![endif]-->
     <!-- prefetch some images -->
     <link rel="prefetch" href="resources/images/praveen/img_0.jpg">
@@ -40,7 +40,7 @@
     <link rel="prefetch" href="resources/images/cards/img_3.jpg">
 </head>
 <body ng-app="ceventApp">
-        <!--[if lt IE 10]>
+        <!--[if lt IE 9]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
