adding live stream link

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,6 +64,7 @@
 	            <li ui-sref-active="active"><a ui-sref="cards">Invitation Cards</a></li>
 	            <li ui-sref-active="active"><a ui-sref="guestbook.list">Guest Book</a></li>
 	            <li ui-sref-active="active"><a ui-sref="venue">Venue</a></li>
+	            <li ui-sref-active="active"><a ui-sref="live">Live Streaming</a></li>
 	          </ul>
 	        </div><!--/.nav-collapse -->
 	      </div>
