changing cdn resources to local resources

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,9 +12,8 @@
 
       <!-- Bootstrap core CSS -->
 
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="resources/css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="resources/css/vendor/xeditable.css">
-    <link rel="stylesheet" href="resources/css/vendor/font-awesome.min.css">
     <link href='//fonts.googleapis.com/css?family=Flamenco' rel='stylesheet' type='text/css'>
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="resources/css/main.css">
@@ -80,8 +79,8 @@
      </div>
     </div><!--/.container-->    
 <!-- Placed at the end of the document so the pages load faster --> 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
+<script src="resources/js/vendor/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="resources/js/vendor/angular.min.js"></script>
 <script type="text/javascript" src="resources/js/vendor/angular-ui-router.min.js"></script>
 <script src="resources/js/vendor/ui-bootstrap-tpls-0.10.0.min.js"></script>
 <script src="resources/js/vendor/xeditable.min.js"></script>
