--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="resources/images/favicon.ico">
 
-    <title>Cevent App</title>
+    <title>Bhanu & Praveen</title>
 
       <!-- Bootstrap core CSS -->
 
