--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,12 +27,19 @@
         <script src="resources/js/vendor/json2.min.js"></script>
     <![endif]-->
     <!-- prefetch some images -->
-    <link rel="prefetch" href="resources/images/praveen/img_0.jpg">
-    <link rel="prefetch" href="resources/images/praveen/img_1.jpg">
-    <link rel="prefetch" href="resources/images/praveen/img_2.jpg">
+    <link rel="prefetch" href="resources/images/img_main.jpg">
     <link rel="prefetch" href="resources/images/bhanu/img_0.jpg">
     <link rel="prefetch" href="resources/images/bhanu/img_1.jpg">
     <link rel="prefetch" href="resources/images/bhanu/img_2.jpg">
+    <link rel="prefetch" href="resources/images/bhanu/img_3.jpg">
+    <link rel="prefetch" href="resources/images/bhanu/img_4.jpg">
+    <link rel="prefetch" href="resources/images/bhanu/img_5.jpg">
+    <link rel="prefetch" href="resources/images/praveen/img_0.jpg">
+    <link rel="prefetch" href="resources/images/praveen/img_1.jpg">
+    <link rel="prefetch" href="resources/images/praveen/img_2.jpg">
+    <link rel="prefetch" href="resources/images/praveen/img_3.jpg">
+    <link rel="prefetch" href="resources/images/praveen/img_4.jpg">
+    <link rel="prefetch" href="resources/images/praveen/img_5.jpg">
     <link rel="prefetch" href="resources/images/cards/1/img_0.jpg">
     <link rel="prefetch" href="resources/images/cards/1/img_1.jpg">
     <link rel="prefetch" href="resources/images/cards/1/img_2.jpg">
@@ -93,5 +100,15 @@
 <script src="resources/js/controllers.js"></script>
 <script src="resources/js/services.js"></script>
 <script src="resources/js/filters.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-49145353-1', 'bhanuwedspraveen.com');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
